--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
         <div class="content">
             <h1>AI Image Generator </h1>
             <p>Convert your text into an image within a second
-                using the power of AI.</p>
+                using the power of AI! Just enter your desired text below and click on "Generate". The generated image will be displayed using the power of AI.</p>
             <form action="#" class="generate-form">
                 <input class="prompt-input" type="text" placeholder="Write prompt here........"      
                   required>
