--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,14 @@
     <title>AI Image Generator </title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+
+    <!--FONT AWESOME-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!--GOOGLE FONTS-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Play&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -15,10 +23,10 @@
         <div class="content">
             <h1>AI Image Generator </h1>
             <p>Convert your text into an image within a second
-                using the power of AI! Just enter your desired text below and click on "Generate". The generated image will be displayed using the power of AI.</p>
+                using the power of AI! Just enter your desired text below and click on "Generate". The generated image
+                will be displayed using the power of AI.</p>
             <form action="#" class="generate-form">
-                <input class="prompt-input" type="text" placeholder="Write prompt here........"      
-                  required>
+                <input class="prompt-input" type="text" placeholder="Write prompt here........" required>
                 <div class="controls">
                     <select class="img-quantity">
                         <option value="1">1 Image</option>
@@ -37,6 +45,27 @@
         <div class="img-card"><img src="images/img-3.jpg" alt="image"></div>
         <div class="img-card"><img src="images/img-4.jpg" alt="image"></div>
     </section>
+
+    <footer>
+        <div class="footer">
+            <div class="row">
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="#"><i class="fa fa-github"></i></a>
+                <a href="#"><i class="fa fa-google"></i></a>
+                <a href="#"><i class="fa fa-apple"></i></a>
+                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="#"><i class="fa fa-youtube"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+            </div>
+
+
+            <div class="row">
+                AI Image Generator - All rights reserved || Designed By: Adarsh Sharma
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
